# wc-api-python

./: .editorconfig  .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.py  test.py  test_api.py  tests.py
.github/workflows/: cd.yml  ci.yml  publish.yml  python-publish.yml
requirements/: test.txt
src/woocommerceaio/: __init__.py  api.py  oauth.py
wc/: __init__.py  api.py  oauth.py
woocommerce/: __init__.py  api.py  oauth.py
woocommerce-api/: __init__.py  __main__.py
