[project]
name = "woocommerceaio"
description = "An async Python wrapper for the WooCommerce REST API"
version = "1.0.0"
authors = [
    { name = "Luis Medel", email = "luis@luismedel.com" },
    { name = "Claudio Sanches @ Automattic", email = "claudio+pypi@automattic.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "httpx >=0, <1"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
